# sp500-predictor

./: .gitignore  LICENSE  README.md  pyproject.toml
